--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.4.4",
+    "three": "^0.167.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
