--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "^3.4.4",
     "three": "^0.167.1",
     "web-vitals": "^2.1.4"
