--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^3.4.4",
+    "react-top-loading-bar": "^2.3.1",
     "three": "^0.167.1",
     "web-vitals": "^2.1.4"
   },
